# mpdqmlplasmoid

./: CMakeLists.txt  Messages.sh  albummodel.cpp  artistmodel.cpp  commondebug.h  controller.cpp  controller.h  mpdfileentry.cpp  mpdfileentry.h  mpdoutput.cpp  mpdoutput.h  mpdqmlplasmoid.cpp  mpdqmlplasmoid.h  mpdqmlplasmoid.kdev4  networkaccess.cpp  networkaccess.h  plasma-applet-mpdqmlplasmoid.desktop  qmpdplasmoidconfiggui.ui  serverprofile.h  wheelarea.cpp  wheelarea.h
.kdev4/: mpdqmlplasmoid.kdev4
ui/: Albums.qml  Artists.qml  CurrentSong.qml  Filepage.qml  Playlist.qml  SavedPlaylistTracks.qml  SavedPlaylists.qml  ServerSettings.qml  Songlist.qml  Songpage.qml  main.qml  mainhorizontal.qml  mainvertical.qml
